Added CToolbar::SaveRestore
Added CToolbar::SetDisabledImageList
Added CToolbar::SetDrawTextFlags
Added CToolbar::SetExtendedStyle
Added CToolbar::SetHotImageList
Added CToolbar::SetHotItem
Added CToolbar::SetImageList
Added CToolbar::SetIndent
Added CToolbar::SetMaxTextRows
Added CToolbar::SetPadding
Added CToolbar::SetToolTips
Added CWinException::Output
Added CWinException::what
Added CWnd::SetWindowTheme
Added ::IsAeroThemed
Modified CSocket::Bind          now uses TCHAR instead of char
Modified CSocket::Connect       now uses TCHAR instead of char
Modified CSocket::Receive       now uses TCHAR instead of char
Modified CSocket::ReceiveFrom   now uses TCHAR instead of char
Modified CSocket::Send          now uses TCHAR instead of char
Modified CSocket::SentTo        now uses TCHAR instead of char
Modidified CWinException::what  now outputs text to debugger
Renamed CToolbar::AddToolbarButton to CToolbar::AddButton
Renamed CWnd::CharToTChar to ::CharToTChar
Renamed CWnd::CharToWide  to ::CharToWide
Renamed CWnd::TCharToChar to ::TCharToChar
Renamed CWnd::TCharToWide to ::TCharToWide
Renamed CWnd::WideToChar  to ::WideToChar
Renamed CWnd::WideToTChar to ::WideToTChar
Removed CWinException::MessageBox

Added GDIPlus sample
Updated Network samples
Update  FormDemo sample

Incompatibilities with previous versions
----------------------------------------
* The stricter testing with asserts might reveal previously hidden errors in 
   user's code.
* Some CSocket functions take TCHAR as an arguement instead of char.
* CPropertySheet.m_PSH is now private. Use SetIcon to set the icon.

Version 6.9
===========

New Features and Enhancements
-----------------------------
* Added a WebBrowser class called CWebBrowser.  This class provides a web 
   browser in a window. This class can be used as a view window anywhere 
   view windows are used, such as in frames, dockers, MDI Children, 
   Tabbed MDIs etc.  It has no dependance on ATL, greatly simplifying the 